# harness-android

./: .commit-msg.tmp  .gitignore  .msg.tmp  ARCHITECTURE.md  README.md  config.toml.example  harness.json.example  harness.toml.example  pyproject.toml
.github/skills/harness-android/: SKILL.md
.github/skills/harness-android/references/: browsers.md  commands.md  pentest-ctx.md  troubleshooting.md
android_harness/: __init__.py  adb.py  browser.py  cli.py  config.py  device.py  emulator.py  hooks.py  intercept.py  mojo.py  pentest.py  proxy.py  recon.py  sdk.py
examples/: edge_remote_control.py  example_pentest.py  mojo_bindings_test.html  mojo_pentest.py  mojo_recon.py  mojo_surface.py  recon_pentest.py
harness_android/: __init__.py  adb.py  browser.py  cli.py  config.py  console.py  device.py  emulator.py  fileserver.py  forensics.py  hooks.py  intents.py  intercept.py  logcat.py  mojo.py  pentest.py  proxy.py  recon.py  sdk.py  ui.py  webview.py
harness_android_mcp/: README.md  __init__.py  __main__.py
tests/: conftest.py  smoke_live.py  smoke_mcp.py  test_adb.py  test_browser.py  test_cdp_session.py  test_config.py  test_fileserver.py  test_forensics.py  test_hooks.py  test_intercept.py  test_logcat.py  test_logcat_dedup.py  test_mojo.py  test_proxy.py  test_recon.py  test_sdk_extract.py  test_webview.py
