[tool.poetry]
name = "harness-android"
version = "0.1.0"
description = "Cross-platform Android emulator harness with remote control capabilities"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "harness_android"},
    {include = "harness_android_mcp"},
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
websocket-client = "^1.7"
rich = "^13.7"
Pillow = "^10.2"
mcp = "^1.2"
# stdlib `tomllib` lands in 3.11; use the `tomli` backport on 3.10 so
# harness.toml loading works everywhere we support.
tomli = { version = "^2.0", python = "<3.11" }

[tool.poetry.scripts]
harness-android = "harness_android.cli:main"
harness-android-mcp = "harness_android_mcp:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
